sg/metabase.tf
# Name: metabase.tf
# Owner: Saurav Mitra
# Description: This terraform config will create the Security Group for Metabase Server

resource "aws_security_group" "metabase_sg" {
  name        = "${var.prefix}_metabase_sg"
  description = "Security Group for Metabase"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.internet_cidr_block]
  }

  tags = {
    Name  = "${var.prefix}-metabase-sg"
    Owner = var.owner
  }
}
